--- a/src/assets/styles/header.css
+++ b/src/assets/styles/header.css
@@ -3,16 +3,32 @@
   align-items: center;
   justify-content: space-between;
   padding: 1.6em;
+  max-width: 1240px;
+  margin: 0 auto;
 }
 
 .navlinks {
   display: flex;
   gap: 1em;
-  font-size: 12px;
+  font-size: 1em;
   font-weight: 500;
 }
 
 .navlinks a {
   color: #FF6060;
   text-transform: uppercase
+}
+
+/* Tablet */
+@media screen and (min-width: 727px) {}
+
+/* Desktop */
+@media screen and (min-width: 1080px) {
+  .header {
+    padding: 3.2em;
+  }
+
+  .navlinks {
+    font-size: 2em;
+  }
 }
