--- a/src/assets/styles/location-card.css
+++ b/src/assets/styles/location-card.css
@@ -1,16 +1,19 @@
 .location-card,
 .gradient {
-  width: 335px;
   height: 255px;
   border-radius: 10px;
+  flex-grow: 1;
 }
 
 .location-card {
   background-color: #FF6060;
+  width: 335px;
+  max-width: 340px;
 }
 
 .gradient {
   background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+  width: 100%;
 }
 
 .title {
@@ -19,7 +22,25 @@
   font-weight: 500;
   color: #fff;
   line-height: 26px;
-  bottom: 25%;
+  bottom: 65px;
   left: 5%;
   width: 120px;
+}
+
+/* Tablet */
+@media screen and (min-width: 727px) {
+
+  .gradient,
+  .location-card {
+    height: 300px;
+  }
+}
+
+/* Desktop */
+@media screen and (min-width: 1080px) {
+
+  .gradient,
+  .location-card {
+    height: 340px;
+  }
 }
