--- a/src/assets/styles/root.css
+++ b/src/assets/styles/root.css
@@ -4,3 +4,9 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-size: 12px;
 }
+
+#root {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
