--- a/src/assets/styles/footer.css
+++ b/src/assets/styles/footer.css
@@ -16,7 +16,7 @@
 }
 
 .footer img {
-  filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(63deg) brightness(102%) contrast(102%);
+  filter: brightness(0) invert(1);
 }
 
 /* Tablet */
