--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -1,12 +1,13 @@
 .home {
-  padding: 0 1.6em;
+  width: 92%;
+  max-width: 1240px;
+  margin: 0 auto;
 }
 
 .bckg-img,
 .slight-opacity {
   border-radius: 10px;
   width: 100%;
-  max-width: 1240px;
   height: 111px;
   margin: 0 auto;
 }
@@ -37,7 +38,7 @@
 
 .bckg-img,
 .locations-list {
-  margin-bottom: 1.5em;
+  /* margin-bottom: 1.5em; */
 }
 
 .locations-list {
@@ -47,7 +48,7 @@
   gap: 1.5em;
   max-width: 1240px;
   margin: 0 auto;
-  margin-bottom: 1.5em;
+  /* margin-bottom: 1.5em; */
 }
 
 /* Desktop */
@@ -58,8 +59,8 @@
     border-radius: 25px;
     padding: 5em 0;
     gap: 5em;
-    margin-top: 3em;
-    margin-bottom: 3em;
+    /* margin-top: 3em; */
+    /* margin-bottom: 3em; */
   }
 
   .bckg-img,
