--- a/src/assets/styles/about.css
+++ b/src/assets/styles/about.css
@@ -1,8 +1,12 @@
+.about {
+  width: 92%;
+  max-width: 1240px;
+  margin: 0 auto;
+}
+
 .bckg-about {
   background-image: url('../images/gustavo-alves-YOXSC4zRcxw-unsplash-1.png');
   height: 223px;
-  width: 92%;
-  margin: 0 auto;
   border-radius: 10px;
   background-repeat: no-repeat;
   background-size: cover;
