--- a/src/assets/styles/header.css
+++ b/src/assets/styles/header.css
@@ -4,7 +4,8 @@
   justify-content: space-between;
   max-width: 1240px;
   width: 92%;
-  margin: 0 auto;
+  padding-top: 20px;
+  align-self: center;
 }
 
 .navlinks {
@@ -16,7 +17,12 @@
 
 .navlinks a {
   color: #FF6060;
-  text-transform: uppercase
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.navlinks a.active {
+  text-decoration: underline;
 }
 
 /* Tablet */
