--- a/src/assets/styles/dropdown.css
+++ b/src/assets/styles/dropdown.css
@@ -15,11 +15,13 @@
   padding: 0 5px;
 }
 
-.collapse--expanded {
+.collapse--expanded p {
   background-color: #f7f7f7;
   color: #FF6060;
   border-radius: 5px;
-  padding: 25px 15px;
+  padding: 25px 15px 50px 15px;
+  margin: 0;
+  line-height: 17px;
 }
 
 .arrow-up {
@@ -29,14 +31,22 @@
 @media screen and (min-width: 1080px) {
 
   .collapse--header,
-  .collapse--expanded {
+  .collapse--expanded p {
     font-size: 2em;
     font-weight: 400;
+    letter-spacing: 1.5px;
   }
 
   .collapse--header {
     height: 47px;
-    padding: 0 1%;
+    padding: 0 2%;
+  }
+
+  .collapse--expanded p {
+    padding: 20px 0px 10px 20px;
+    margin: 0;
+    line-height: 34px;
+    font-weight: 200;
   }
 
 }
