--- a/src/assets/styles/root.css
+++ b/src/assets/styles/root.css
@@ -9,4 +9,13 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  gap: 20px;
+}
+
+@media screen and (min-width: 1080px) {
+
+  #root {
+    gap: 43px
+  }
+
 }
