--- a/src/assets/styles/tag.css
+++ b/src/assets/styles/tag.css
@@ -1,5 +1,4 @@
 .tag {
-  width: 84px;
   height: 18px;
   border-radius: 5px;
   background-color: #FF6060;
@@ -8,4 +7,5 @@
   justify-content: center;
   align-items: center;
   font-size: 10px;
+  padding: 2px 10px;
 }
