--- a/src/assets/styles/tag.css
+++ b/src/assets/styles/tag.css
@@ -9,3 +9,12 @@
   font-size: 10px;
   padding: 2px 10px;
 }
+
+@media screen and (min-width: 1080px) {
+  .tag {
+    font-size: 14px;
+    height: 25px;
+    border-radius: 10px;
+    min-width: 115px;
+  }
+}
