Arrow on carousel display only once and not for each image

--- a/src/assets/styles/slider.css
+++ b/src/assets/styles/slider.css
@@ -1,4 +1,4 @@
-.slide-image {
+.carousel {
   position: relative;
 }
 
@@ -16,6 +16,7 @@
   width: 2em;
   position: absolute;
   top: 50%;
+  z-index: 1;
 }
 
 .arrow-left {
