--- a/src/assets/styles/apartment.css
+++ b/src/assets/styles/apartment.css
@@ -57,8 +57,8 @@ span {
 .align-dropdown {
   width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  flex-wrap: wrap;
+  justify-content: space-between;
   gap: 10px;
 }
 
@@ -138,12 +138,7 @@ span {
   }
 
   .align-dropdown {
-    flex-direction: row;
     gap: 76px;
-  }
-
-  .collapse {
-    flex-grow: 1;
   }
 
   .apartment .collapse .collapse--expanded p {
